kubernetes/app-gke-secure-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arc-secure-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "arclytics-ip"
    kubernetes.io/ingress.class: "gce"
    # kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: client-app-https-secret
    - secretName: simcct-app-https-secret
  backend:
    serviceName: client-service
    servicePort: 8080
  rules:
  - host: api.arclytics.io
    http:
      paths:
      - backend:
          serviceName: simcct-service
          servicePort: 8000
  - host: app.arclytics.io
    http:
      paths:
      - backend:
          serviceName: client-service
          servicePort: 8080
